@@ -860,6 +860,8 @@ END	= end-of-list
 ^[v	= scroll-down
 ^V	= scroll-up
 ^@	= scroll-up
+^[g	= horizontal-scroll-left
+^[j	= horizontal-scroll-right
 A	= SIGALRM
 B	= SIGBUS
 C	= SIGCHLD
